name:                rea-backend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rea-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
--  ld-options:          -static
  ghc-options:         -threaded  
  other-modules:
                      BsonAeson
                    , QueryParser
                    , Query
                    , Db
                    , Token
  build-depends:       base >= 4.7 && < 5
                        , wai == 3.2.1.1
                        , warp == 3.2.18.1
                        , http-types == 0.12.1
                        , text == 1.2.3.0
                        , aeson == 1.3.0.0
                        , scientific == 0.3.5.3
                        , bson == 0.3.2.3
                        , mongoDB == 2.3.0.5
                        , unordered-containers >= 0.2.9.0
                        , vector >= 0.7.1
                        , word8 >= 0.1.3
                        , bytestring >= 0.10.8.1
                        , jose >= 0.6.0.3
                        , lens >= 4.3
                        , mtl >= 2.2.1
                        , http-conduit >= 2.2.3.2
                        , stringsearch >= 0.3.6.6
                        , lens-tutorial >= 1.0.3
                        , case-insensitive >= 1.2.0.6
                        , protolude >= 0.2
                        , graphql-api == 0.3.0
                        , containers == 0.5.11.0
